# scheduler

./: Cargo.toml  README.md  flake.nix
cli_scheduler/: Cargo.toml
cli_scheduler/src/: main.rs  subject_iter.rs
json_parser/: Cargo.toml
json_parser/src/: career_plan.rs  lib.rs  test.rs
json_parser/src/test/: commissions.json  mod.rs
src/: lib.rs  loader.rs  main.rs  subject_iter.rs
src/loader/: loader.rs  mod.rs
src/loaders/: json_loader.rs  mod.rs  sql_loader.rs
src/models/: collidable.rs  combinable.rs  day.rs  mod.rs  span.rs  subjects.rs  task.rs  time.rs  week.rs
src/option_generator/: filters.rs  mod.rs
