[package]
name = "scheduler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = "*"
extend = "*"
enum-map = "*"
serde = "*"
strum = "*"
strum_macros = "*"
gen-iter = "*"
itertools = "*"
permutator = "*"
colored = "*"
clap = { version = "3.2.8", features = ["derive"] }
json_parser = { path = "json_parser" }
serde_json = "1.0.82"
