[package]
name = "scheduler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = { version = "*", optional = true }
extend = "*"
enum-map = "*"
serde = "*"
strum = "*"
strum_macros = "*"
gen-iter = "*"
permutator = "*"
colored = "*"
itertools = "*"
json_parser = { path = "json_parser", optional = true }
serde_json = { version = "1.0.82", optional = true }

[features]
sqlite = ["dep:rusqlite"]
json = ["dep:serde_json", "dep:json_parser"]
